--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <img src="images/icon-complete.svg" alt="">
       <h2>Thank you!</h2>
       <p>We've added your card details</p>
-      <button><a href="index.html">Continue</a></button>
+      <button><a href="#">Continue</a></button>
     </div>
     <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend
