--- a/index.html
+++ b/index.html
@@ -74,13 +74,15 @@
 
     </div>
 
-    <!----------------------------------- Thank You card ------------------------------------->
+    <!--~------------------------------ Thank You card ----------------------------------~-->
 
     <div id="thank">
       <img src="images/icon-complete.svg" alt="">
       <h2>Thank you!</h2>
       <p>We've added your card details</p>
-      <button><a href="#">Continue</a></button>
+      <button>
+        <a href="#">Continue</a>
+      </button>
     </div>
     <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend
