--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <div id="name-number">
         <div id="card-name">
-          <label>Cardholder Name</label>
+          <label>Cardholder Username</label>
           <input type="text" placeholder="e.g. Jane Appleseed" id="card-name-input">
           <span class="wrong-name">Can't be blank</span>
         </div>
